# Software-Architecture-with-Cpp-2E

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md
.github/actions/download-build-dir/: action.yml
.github/actions/prepare-environment/: action.yml
.github/actions/upload-build-dir/: action.yml
.github/workflows/: github-ci.yml  pre-commit.yml
Chapter01/: CMakeLists.txt  README.md
Chapter01/cc/coupling/: loose.cpp  tight.cpp
Chapter01/dry/: bad.cpp  good.cpp
Chapter01/philosophy/time/: bad_time.cpp
Chapter01/solid/dip/: bad.cpp  dynamic_dip.cpp  static_dip.cpp
Chapter01/solid/lsp/: bad_substitution.cpp  good_substitution.cpp
Chapter01/solid/srp/: bad.cpp  good.cpp
Chapter02/: CMakeLists.txt  README.md
Chapter02/state/: PaymentCalculatorV1.h  PaymentCalculatorV2.h  PaymentCalculatorV3.h
Chapter03/: README.md
Chapter04/: README.md
Chapter04/tracing_and_reverse_proxy/: compose.yaml
Chapter05/: CMakeLists.txt  README.md
Chapter05/src/: 1_base.cpp  2_ranges_part_1.cpp  3_ranges_part_2.cpp  4_constexpr.cpp  5_concepts.cpp  6_monadic_expected.cpp  6_monadic_optional.cpp  7_monadic_expected.cpp  7_monadic_optional.cpp  7_pointers.cpp  8_raii.cpp
Chapter05/src/apis/: declarative.cpp
Chapter06/: 02_copy_move.cpp  03_rules_of_5_and_0.cpp  04_hidden_friend__copy_and_swap.cpp  05_niebloids.cpp  07_raii_deducing_this.cpp  07_static_polymorphism_1.cpp  07_static_polymorphism_2.cpp  08_type_erasure.cpp  09_factory_functions.cpp  10_factory_class.cpp  12_state_and_visitation.cpp  13_memory_arena_winking_out.cpp  14_small_string_optimization.cpp  CMakeLists.txt  README.md
Chapter07/: README.md
Chapter07/cmake/: FetchGTest.cmake
Chapter07/customer/: README.md
Chapter07/customer/conan/: conanfile.py.in
Chapter07/src/customer/: CMakeLists.txt
Chapter08/: README.md  _conanfile.txt  conanfile.py
Chapter08/docker/: README.md  compose.yaml
Chapter09/: README.md
Chapter09/experimental/: CMakeLists.txt  README.md
Chapter09/experimental/src/: main.cpp
Chapter09/experimental/src/stores/: CMakeLists.txt  main.cpp  merchant.cppm  store.cppm  store_item.cppm
Chapter09/experimental/test_package/: CMakeLists.txt  example.cpp
Chapter09/headers/: CMakeLists.txt  README.md
Chapter09/mixed/: CMakeLists.txt  README.md
Chapter09/modules/: CMakeLists.txt  README.md
Chapter09/modules/src/stores/: CMakeLists.txt  store.cppm  store_item.cppm
Chapter10/customer/: README.md  conanfile.txt
Chapter10/mobile_app/: README.md  conanfile.txt
Chapter11/: README.md  conanfile.txt
Chapter11/docker/: Dockerfile  README.md  compose-lgtm.yml
Chapter12/: README.md
Chapter12/bdd/: README.md
Chapter12/c_qsort/: CMakeLists.txt
Chapter12/customer/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
Chapter12/mobile_app/: README.md
Chapter12/sandboxing/: README.md
Chapter13/: CMakeLists.txt  README.md  conanfile.py
Chapter13/customer/: README.md
Chapter13/lifetime/: CMakeLists.txt  README.md
Chapter13/mobile_app/: README.md
Chapter13/sandboxing/: CMakeLists.txt  README.md  index.html  main.cpp
Chapter14/: CMakeLists.txt  README.md  conanfile.py
Chapter14/coroutines/: main_4.cpp
Chapter14/minio/: CMakeLists.txt  README.md  conanfile.txt  minio.cpp
Chapter14/optimization/: CMakeLists.txt
Chapter14/profiling/: main_1.cpp
Chapter14/redis/: CMakeLists.txt  README.md  compose-dragonfly.yaml  compose-redis.yaml
Chapter14/s3/: CMakeLists.txt  README.md  conanfile.py
Chapter15/: README.md
Chapter15/message/kafka/: CMakeLists.txt  README.md  compose.yaml  conanfile.txt  consumer.cpp  producer.cpp
Chapter15/message/rabbitmq/: CMakeLists.txt  README.md  compose.yaml  conanfile.txt
Chapter15/minio/: README.md
Chapter15/packer/: README.md
Chapter15/redis/: README.md  compose-dragonfly.yaml  compose-valkey.yaml  conanfile.txt
Chapter15/s3/: README.md  conanfile.py  s3.cpp
Chapter16/: README.md
Chapter16/customer/: README.md  conanfile.txt
Chapter16/grpc/: CMakeLists.txt  README.md
Chapter16/message/rabbitmq/: CMakeLists.txt  README.md  producer.cpp
Chapter16/rpc/: README.md
Chapter17/: README.md  conanfile.txt
Chapter17/containers/: README.MD
Chapter17/customer/: README.md
Chapter17/docker/: Dockerfile  compose-lgtm.yml
Chapter17/minio/: conanfile.txt
Chapter17/orchestration/: README.md
Chapter18/: CMakeLists.txt  README.md  conanfile.txt
Chapter18/docker/: README.md
Chapter18/kubernetes/: README.md
Chapter19/customer/: README.md
Chapter20/: README.md  conanfile.txt
Chapter20/docker/: README.md
_Chapter17_/minio/: README.md  minio.cpp
_Chapter17_/s3/: README.md  conanfile.py
_Chapter18_/: README.md
_Chapter18_/redis/: redis.cpp
devenv_readme/: devenv_linux.md  devenv_macos.md  devenv_windows.md
(+123 files in other folders)
